Fixes night-toggle on IE
night-toggle shows on top of text both in topic list and post when using
IE 11. This is because IE didn't handle content as a block, and
pading-top was ignored. This commit fixes that.

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,3 +1,4 @@
+.blog {display: block;}
 .site-nav {margin-bottom:40px}
 aside.night-toggle{background-color:rgb(38,38,38);border-radius:12px;cursor:pointer;height:24px;
     position:absolute;margin-right:-12px; right:50%;top:30px;width:24px}
